# E2EMedicalChatBotWithRAG

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
app/: main.py
app/routers/: chatbot.py
app/services/: __init__.py  pinecone.py
app/templates/: index.html
app/templates/static/css/: style.css
app/templates/static/js/: script.js
config/: config.yaml
notebooks/: inference_model.ipynb  redis.ipynb  streaming.ipynb
src/E2EMedicalChatBotWithRAG/chains/: rag_chain.py
src/E2EMedicalChatBotWithRAG/config/: __init__.py  configuration.py
src/E2EMedicalChatBotWithRAG/entity/: config_entity.py
src/E2EMedicalChatBotWithRAG/exceptions/: exception_handler.py
src/E2EMedicalChatBotWithRAG/logger/: log.py
src/E2EMedicalChatBotWithRAG/models/: __init__.py  embedding_model.py  llm_model.py
src/E2EMedicalChatBotWithRAG/preprocess/: __init__.py  document_preprocesser.py
src/E2EMedicalChatBotWithRAG/prompts/: system_prompt.txt
src/E2EMedicalChatBotWithRAG/retrievers/: __init__.py  async_retriever.py
src/E2EMedicalChatBotWithRAG/utils/: __init__.py  helper.py
src/E2EMedicalChatBotWithRAG/vector_database/: __init__.py  pinecone_db.py  redis_db.py
src/E2EMedicalChatBotWithRAG/vectorestores/: __init__.py  async_pinecone_db.py  pinecone_db.py  redis_db.py
