[project]
name = "e2emedicalchatbotwithrag"
version = "0.1.0"
description = "An end-to-end medical chatbot using Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
e2emedicalchatbotwithrag = { workspace = true }

[dependency-groups]
dev = [
    "e2emedicalchatbotwithrag",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
