[project]
name = "e2emedicalchatbotwithrag"
version = "0.1.0"
description = "An end-to-end medical chatbot using Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
e2emedicalchatbotwithrag = { workspace = true }

[dependency-groups]
dev = []
